# tangled-core

./: .air.toml  .gitignore  .gitmodules  Cargo.toml  appview.db-journal  config.yaml  flake.nix  go.mod  go.sum  input.css  lexicon-build-config.json  license  readme.md  rust-toolchain.toml  tailwind.config.js
.air/: appview.toml  knotserver.toml
.zed/: settings.json
api/bild/: bildpublicKey.go  cbor_gen.go
api/tangled/: cbor_gen.go  feedstar.go  graphfollow.go  issuecomment.go  issuestate.go  knotmember.go  knotpolicy.go  repoissue.go  stateclosed.go  stateopen.go  tangledpublicKey.go  tangledrepo.go
appview/: config.go  consts.go  resolver.go
appview/auth/: auth.go
appview/db/: db.go  follow.go  issues.go  jetstream.go  pubkeys.go  registration.go  repos.go  star.go  timeline.go
appview/pages/: funcMap.go  funcmap.go  htmx.go  knot.html  knots.html  layout.html  login.html  markdown.go  pages.go  (+3 more)
auth/: auth.go
cmd/: gen.go
config/: config.go
core/: Cargo.toml  bild.db
core/src/: db.rs  dns.rs  main.rs  routes.rs
db/: access.go  init.go  pubkeys.go  repo.go
git/: git.go  repo.go
jetstream/: jetstream.go
knotserver/: file.go  git.go  handler.go  http_util.go  internal.go  jetstream.go  middleware.go  routes.go  util.go
lexicons/: follow.json  member.json  policy.json  publicKey.json  repo.json  star.json
log/: log.go
rbac/: rbac.go
routes/: access.go  auth.go  file.go  git.go  handler.go  html_util.go  internal.go  routes.go  util.go
scripts/: appview.sh
static/: style.css
systemd/: knotserver.service
templates/: timeline.html
types/: diff.go  repo.go  tree.go
(+111 files in other folders)
