[workspace]
resolver = "3"

members = [
  "core",
]

exclude = [
  "atrium"
]

[workspace.dependencies]
atrium-xrpc = { path = "./atrium/atrium-xrpc"}
atrium-xrpc-client = { path = "./atrium/atrium-xrpc-client", features=["isahc"]}
atrium-oauth-client = { path = "./atrium/atrium-oauth/oauth-client"}
atrium-identity = { path = "./atrium/atrium-oauth/identity"}
atrium-api = { path = "./atrium/atrium-api"}
atrium-common = { path = "./atrium/atrium-common"}
