[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.43.0", features = ["full"] }
atrium-xrpc = { workspace=true }
atrium-oauth-client = { workspace=true }
atrium-identity = { workspace=true }
atrium-api = { workspace=true }
atrium-xrpc-client = { workspace=true }
atrium-common = { workspace=true }
hickory-resolver = "0.24.2"
anyhow = "1.0.95"
tower-sessions = "0.14.0"
serde = "1.0.217"
tokio-rusqlite = { version = "0.6.0", features = ["bundled"] }
async-trait = "0.1.85"
serde_json = "1.0.137"
openssh-keys = "0.6.4"

